{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 32,
  "lineage": "d42919c1-f004-d56f-e881-ca6630803b67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0734f5373f29843de",
            "domain": "vpc",
            "id": "eipalloc-0734f5373f29843de",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-130-16-150.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.16.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-natip"
            },
            "tags_all": {
              "Name": "test-natip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:internet-gateway/igw-0492775bfe905bdda",
            "id": "igw-0492775bfe905bdda",
            "owner_id": "491183539683",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0734f5373f29843de",
            "connectivity_type": "public",
            "id": "nat-06e50cb932ff3c70d",
            "network_interface_id": "eni-0bf6f4158ac6767ee",
            "private_ip": "10.0.1.122",
            "public_ip": "18.130.16.150",
            "subnet_id": "subnet-00cfa9ed7b9f55df6",
            "tags": {
              "Name": "test-natgw"
            },
            "tags_all": {
              "Name": "test-natgw"
            }
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.igw",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:route-table/rtb-030c1d362c7bae703",
            "id": "rtb-030c1d362c7bae703",
            "owner_id": "491183539683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e50cb932ff3c70d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-rt"
            },
            "tags_all": {
              "Name": "test-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:route-table/rtb-0eab6e20f911e4a7c",
            "id": "rtb-0eab6e20f911e4a7c",
            "owner_id": "491183539683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0492775bfe905bdda",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public-rt"
            },
            "tags_all": {
              "Name": "test-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae8a592a38511d39",
            "route_table_id": "rtb-030c1d362c7bae703",
            "subnet_id": "subnet-044632c1a2ba2f562"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097dab114decd381c",
            "route_table_id": "rtb-030c1d362c7bae703",
            "subnet_id": "subnet-06b24ca5105bc7b4d"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d6d21f392e48976",
            "route_table_id": "rtb-030c1d362c7bae703",
            "subnet_id": "subnet-0319992a9078ad670"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfc038aaaa38a12e",
            "route_table_id": "rtb-0eab6e20f911e4a7c",
            "subnet_id": "subnet-00cfa9ed7b9f55df6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0387faf112ff5b303",
            "route_table_id": "rtb-0eab6e20f911e4a7c",
            "subnet_id": "subnet-0aeedbcddcfcc17c5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0545bd48ed99dd915",
            "route_table_id": "rtb-0eab6e20f911e4a7c",
            "subnet_id": "subnet-0b67bd6972c08cb9f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:security-group/sg-0dfb47370519e85a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfb47370519e85a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220922125118252100000005",
            "name_prefix": "terraform-",
            "owner_id": "491183539683",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:subnet/subnet-044632c1a2ba2f562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044632c1a2ba2f562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491183539683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-eu-west-2a-private-subnet"
            },
            "tags_all": {
              "Name": "test-eu-west-2a-private-subnet"
            },
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:subnet/subnet-06b24ca5105bc7b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b24ca5105bc7b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491183539683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-eu-west-2b-private-subnet"
            },
            "tags_all": {
              "Name": "test-eu-west-2b-private-subnet"
            },
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:subnet/subnet-0319992a9078ad670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.1.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0319992a9078ad670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491183539683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-eu-west-2c-private-subnet"
            },
            "tags_all": {
              "Name": "test-eu-west-2c-private-subnet"
            },
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:subnet/subnet-00cfa9ed7b9f55df6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cfa9ed7b9f55df6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491183539683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-eu-west-2a-public-subnet"
            },
            "tags_all": {
              "Name": "test-eu-west-2a-public-subnet"
            },
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:subnet/subnet-0aeedbcddcfcc17c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeedbcddcfcc17c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491183539683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-eu-west-2b-public-subnet"
            },
            "tags_all": {
              "Name": "test-eu-west-2b-public-subnet"
            },
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:subnet/subnet-0b67bd6972c08cb9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.1.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b67bd6972c08cb9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491183539683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-eu-west-2c-public-subnet"
            },
            "tags_all": {
              "Name": "test-eu-west-2c-public-subnet"
            },
            "vpc_id": "vpc-06cf44886c83aefef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:491183539683:vpc/vpc-06cf44886c83aefef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-03eaa1af1ce61a4f4",
            "default_route_table_id": "rtb-0fc58e0d6067977af",
            "default_security_group_id": "sg-06988e0f36b563a3f",
            "dhcp_options_id": "dopt-07c2a98a80bf3ff3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06cf44886c83aefef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc58e0d6067977af",
            "owner_id": "491183539683",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}